force-app/main/default/objects/SQX_Team_Members__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>SQX_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>