force-app/main/default/objects/SQX_Team_Members__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <label>Contact Info</label>
    <length>30</length>
    <type>Text</type>
</CustomField>