force-app/main/default/objects/SQX_Team_Members__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_Info__c</columns>
    <columns>Member_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>