force-app/main/default/objects/SQX_Team_Members__c/listViews/CQ_List_View.listView-meta.xml
<ListView>
    <fullName>CQ_List_View</fullName>
    <columns>NAME</columns>
    <columns>Member_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Contact_Info__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>CQ List View</label>
</ListView>